--- a/app/mobile/no-results-flights.html
+++ b/app/mobile/no-results-flights.html
@@ -61,9 +61,11 @@
         <div class="clearfix"></div>
       </div>
       <div id="main-wrap" class="pos-rlt">
-        <div class="top-banner flights"><span class="block text-center m-b-sm m-t-md"><i class="ico ico-mobile ico-flight-md m-t-xs"></i></span>
-          <h3 class="banner-title text-u-c text-center">Great Value Fares</h3>
-          <h5 class="subtitle text-u-c text-center">Why Book with sapta Tours?</h5>
+        <div class="empty-search-message flights m-b-md b-b">
+          <div class="text-center l-h"><strong class="f-bold">Sorry we can't find anything that matches your search.</strong> Please try a different search, or check out our deals below.</div>
+        </div>
+        <div class="top-banner">
+          <h3 class="text-md m-b-lg m-t-sm text-u-c text-center">Great Value Fares</h3>
         </div>
         <div class="featured-destination-list">
           <div class="item pos-rlt b-b">
@@ -87,37 +89,6 @@
                 <label class="text-xs">From</label><span class="pricing block f-bold"><span class="currency"></span><span class="price text-lg"><span class="pricing block f-bold"><span class="currency">$</span><span class="price text-lg">800</span></span></span></span></span>
             </div>
           </div>
-          <div class="item pos-rlt b-b">
-            <figure class="pos-abt"><img src="img/destinations/Singapore.jpg" alt=""/></figure>
-            <div class="featured-info pos-abt">
-              <h4 class="name text-lg"><a href="mobile/tour-detail.html">Singapore</a></h4><span class="inline count-accomodations">Economy Return</span><span class="pricing-flight block pos-abt">
-                <label class="text-xs">From</label><span class="pricing block f-bold"><span class="currency"></span><span class="price text-lg"><span class="pricing block f-bold"><span class="currency">$</span><span class="price text-lg">800</span></span></span></span></span>
-            </div>
-          </div>
-          <div class="item pos-rlt b-b">
-            <figure class="pos-abt"><img src="img/destinations/Hongkong.jpg" alt=""/></figure>
-            <div class="featured-info pos-abt">
-              <h4 class="name text-lg"><a href="mobile/tour-detail.html">Hongkong</a></h4><span class="inline count-accomodations">Economy Return</span><span class="pricing-flight block pos-abt">
-                <label class="text-xs">From</label><span class="pricing block f-bold"><span class="currency"></span><span class="price text-lg"><span class="pricing block f-bold"><span class="currency">$</span><span class="price text-lg">800</span></span></span></span></span>
-            </div>
-          </div>
-          <div class="item pos-rlt b-b">
-            <figure class="pos-abt"><img src="img/destinations/london.jpg" alt=""/></figure>
-            <div class="featured-info pos-abt">
-              <h4 class="name text-lg"><a href="mobile/tour-detail.html">London</a></h4><span class="inline count-accomodations">Economy Return</span><span class="pricing-flight block pos-abt">
-                <label class="text-xs">From</label><span class="pricing block f-bold"><span class="currency"></span><span class="price text-lg"><span class="pricing block f-bold"><span class="currency">$</span><span class="price text-lg">800</span></span></span></span></span>
-            </div>
-          </div>
-          <div class="item pos-rlt b-b">
-            <figure class="pos-abt"><img src="img/destinations/Paris.jpg" alt=""/></figure>
-            <div class="featured-info pos-abt">
-              <h4 class="name text-lg"><a href="mobile/tour-detail.html">Paris</a></h4><span class="inline count-accomodations">Economy Return</span><span class="pricing-flight block pos-abt">
-                <label class="text-xs">From</label><span class="pricing block f-bold"><span class="currency"></span><span class="price text-lg"><span class="pricing block f-bold"><span class="currency">$</span><span class="price text-lg">800</span></span></span></span></span>
-            </div>
-          </div>
-        </div>
-        <div class="spinner-block">
-          <div class="spinner">Loading...</div>
         </div>
       </div>
       <footer>
