document details popup for visa tours

--- a/app/mobile/tour-detail.html
+++ b/app/mobile/tour-detail.html
@@ -187,13 +187,13 @@
                     <div class="name">Visa Europe</div>
                     <div class="country text-u-c">WNI</div>
                     <div class="pricing"><span class="inline currency f-bold">USD</span><span class="inline price">150</span></div>
-                    <div class="action text-center"><a href="#" class="text-orange text-u-c text-xs">More</a></div>
+                    <div class="action text-center"><a href="#" data-toggle="modal" data-target="#documentDetailPopup" class="text-orange text-u-c text-xs">More</a></div>
                   </li>
                   <li>
                     <div class="name">Visa Europe</div>
                     <div class="country text-u-c">WNI</div>
                     <div class="pricing"><span class="inline currency f-bold">USD</span><span class="inline price">150</span></div>
-                    <div class="action text-center"><a href="#" class="text-orange text-u-c text-xs">More</a></div>
+                    <div class="action text-center"><a href="#" data-toggle="modal" data-target="#documentDetailPopup" class="text-orange text-u-c text-xs">More</a></div>
                   </li>
                 </ul>
               </div>
@@ -231,6 +231,31 @@
                 </ul>
               </div>
               <div class="text-center m-b-lg"><a href="#" class="btn btn-white text-14px f-bold m-auto">What’s Included in the Price</a></div>
+            </div>
+          </div>
+          <div id="documentDetailPopup" tabindex="-1" role="dialog" class="modal fade">
+            <div class="document-detail-popup pos-rlt">
+              <h4 class="text-u-c title-search text-center m-b-lg">Dokumen Detail<a href="/mobile" data-dismiss="modal" aria-label="Close" class="close close">Close</a></h4>
+              <div class="content">
+                <div class="m-t m-b">
+                  <div class="f-bold text-u-c text-md">Dokumen yang dibutuhkan:</div>
+                </div>
+                <ol>
+                  <li class="m-b-md">Passport Asli (Lama & Baru, Berlaku Diatas 6 Bulan)</li>
+                  <li class="m-b-md">Foto 3 Lembar Berwarna Ukuran 3,5 X 4,5 Latar Belakang Putih</li>
+                  <li class="m-b-md">Surat Sponsor</li>
+                  <li class="m-b-md">Surat Referensi Bank</li>
+                  <li class="m-b-md">Fotocopy Bukti Keuangan (3 Bulan Terakhir)</li>
+                  <li class="m-b-md">Fotocopy SIUP (Jika Pemilik)</li>
+                  <li class="m-b-md">Fotocopy KK</li>
+                  <li class="m-b-md">Fotocopy KTP</li>
+                  <li class="m-b-md">Fotocopy Akte Lahir</li>
+                  <li class="m-b-md">Fotocopy Surat Ganti Nama (Jika Ada)</li>
+                  <li class="m-b-md">Konfirmasi Hotel</li>
+                  <li class="m-b-md">Asuransi Perjalanan</li>
+                  <li class="m-b-md">Tidak Boleh Ada PENDUL ( ALAMAT PENDUDUK LUAR )</li>
+                </ol>
+              </div>
             </div>
           </div>
         </div>
