--- a/app/index.html
+++ b/app/index.html
@@ -79,11 +79,103 @@
           <h5>Hive</h5><span>Penyanyi</span>
         </div>
       </div>
+      <div class="share-and-win section">
+        <div class="container">
+          <h3 class="subtitle text-center">SHARE &amp; STAND A CHANCE <br />TO WIN IPHONE 6</h3>
+          <div class="social-media text-center"><a href="" title="Facebook" class="icon facebook"></a><a href="" title="Twitter" class="icon twitter"></a><a href="" title="Linkedin" class="icon linkedin"></a><a href="" title="Google+" class="icon gplus"></a><a href="" title="Email" class="icon email"></a></div>
+          <div class="form-submit-email">
+            <h5 class="text-center">Enter your email, so we can let you know if you’re winner</h5>
+            <!-- Begin MailChimp Signup Form-->
+            <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+            <div id="mc_embed_signup">
+              <form id="mc-embedded-subscribe-form" action="//karejo.us11.list-manage.com/subscribe/post?u=f0f6e7b09607099b2b5c9b550&amp;id=0ed205dd7b" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate="" class="validate">
+                <div id="mc_embed_signup_scroll">
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                    <input type="text" name="b_f0f6e7b09607099b2b5c9b550_0ed205dd7b" tabindex="-1" value="">
+                  </div>
+                  <input id="mce-EMAIL" type="email" value="" name="EMAIL" placeholder="Your email here" required="" class="email">
+                  <input id="mc-embedded-subscribe" type="submit" value="SUMMIT" name="subscribe" class="button">
+                  <div class="clearfix"></div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section">
+        <div class="testimony-section container">
+          <h3 class="subtitle text-center">#SHOPEE1212</h3>
+          <div id="testimony-slider" class="flexslider">
+            <ul class="slides">
+              <li>
+                <div class="content-testimony"><img src="../img/twitter-dummy/1.png">
+                  <blockquote>
+                    <p>Can’t wait to buy stuffs from&nbsp;<a href="#">@shopee_id</a>&nbsp;on 12.12&nbsp;<a hreft="">#shopee1212</a></p><span class="text-small">Tweeted 12 mins ago</span>
+                  </blockquote>
+                  <div class="clearfix"></div>
+                </div>
+              </li>
+              <li>
+                <div class="content-testimony"><img src="../img/twitter-dummy/2.png">
+                  <blockquote>
+                    <p>Can’t wait to buy stuffs from&nbsp;<a href="#">@shopee_id</a>&nbsp;on 12.12&nbsp;<a hreft="">#shopee1212</a></p><span class="text-small">Tweeted 12 mins ago</span>
+                  </blockquote>
+                  <div class="clearfix"></div>
+                </div>
+              </li>
+              <li>
+                <div class="content-testimony"><img src="../img/twitter-dummy/3.png">
+                  <blockquote>
+                    <p>Can’t wait to buy stuffs from&nbsp;<a href="#">@shopee_id</a>&nbsp;on 12.12&nbsp;<a hreft="">#shopee1212</a></p><span class="text-small">Tweeted 12 mins ago</span>
+                  </blockquote>
+                  <div class="clearfix"></div>
+                </div>
+              </li>
+              <li>
+                <div class="content-testimony"><img src="../img/twitter-dummy/4.png">
+                  <blockquote>
+                    <p>Can’t wait to buy stuffs from&nbsp;<a href="#">@shopee_id</a>&nbsp;on 12.12&nbsp;<a hreft="">#shopee1212</a></p><span class="text-small">Tweeted 12 mins ago</span>
+                  </blockquote>
+                  <div class="clearfix"></div>
+                </div>
+              </li>
+              <li>
+                <div class="content-testimony"><img src="../img/twitter-dummy/2.png">
+                  <blockquote>
+                    <p>Can’t wait to buy stuffs from&nbsp;<a href="#">@shopee_id</a>&nbsp;on 12.12&nbsp;<a hreft="">#shopee1212</a></p><span class="text-small">Tweeted 12 mins ago</span>
+                  </blockquote>
+                  <div class="clearfix"></div>
+                </div>
+              </li>
+              <li>
+                <div class="content-testimony"><img src="../img/twitter-dummy/3.png">
+                  <blockquote>
+                    <p>Can’t wait to buy stuffs from&nbsp;<a href="#">@shopee_id</a>&nbsp;on 12.12&nbsp;<a hreft="">#shopee1212</a></p><span class="text-small">Tweeted 12 mins ago</span>
+                  </blockquote>
+                  <div class="clearfix"></div>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div id="carousel" class="flexslider">
+            <ul class="slides">
+              <li><img src="../img/twitter-dummy/1.png"></li>
+              <li><img src="../img/twitter-dummy/2.png"></li>
+              <li><img src="../img/twitter-dummy/3.png"></li>
+              <li><img src="../img/twitter-dummy/4.png"></li>
+              <li><img src="../img/twitter-dummy/2.png"></li>
+              <li><img src="../img/twitter-dummy/3.png"></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="footer">
       <div class="appLogoContainer">
         <h3 class="subtitle">Download Shopee Sekarang!</h3><span class="appLogo"></span>
       </div><span class="qrCode"></span><span class="downloadLinks"><a target="_blank" href="http://app.appsflyer.com/id959841443?pid=OrganicA&amp;c=lp_home_ios2" class="download appleStore bgImg_contain"></a><a target="_blank" href="http://app.appsflyer.com/com.shopee.id?pid=OrganicA&amp;c=lp_home_and2" class="download googlePlay bgImg_contain"></a></span>
+      <div class="copyright text-center"><span>&copy; 2015 Shopee</span></div>
     </div>
     <script src="js/libs/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
